import java.io.*;
import java.util.*;

/**
 * Utility class for parsing student data from external files.
 * Provides functionality to read and validate student information
 * and convert it into UniversityStudent objects.
 */
public class DataParser {
    /**
     * Parses student data from a file and creates UniversityStudent objects.
     * Expected file format: Each line contains student data with fields separated by commas.
     *
     * @param filename the path to the file containing student data
     * @return a list of UniversityStudent objects parsed from the file
     * @throws IOException if the file cannot be read or accessed
     */
    public static List<UniversityStudent> parseStudents(String filename) throws IOException {
        return new ArrayList<>();
    }
}
