import java.util.*;

/**
 * Implements the Gale-Shapley algorithm for stable roommate assignment.
 * This algorithm finds a stable matching between students based on their preferences,
 * ensuring that no pair of unmatched students would both prefer each other over their current matches.
 */
public class GaleShapley {
    /**
     * Assigns roommates to students using the Gale-Shapley algorithm.
     * Creates reciprocal roommate pairings based on mutual preferences.
     * Students with no preferences remain unmatched.
     *
     * @param students the list of UniversityStudent objects to assign roommates for
     */
    public static void assignRoommates(List<UniversityStudent> students) {
    }
}
