import java.util.*;

/**
 * Handles the formation of study pods and social groups.
 * Groups students into pods of a specified size based on connection strength
 * and mutual preferences using the underlying student graph.
 */
public class PodFormation {
    /**
     * Constructs a PodFormation with a given student graph.
     *
     * @param graph the StudentGraph containing all students and their relationships
     */
    public PodFormation(StudentGraph graph) {
        // Constructor
    }

    /**
     * Divides students into pods of the specified size.
     * Attempts to maximize connection strength within each pod.
     *
     * @param podSize the desired size of each pod (number of students per pod)
     */
    public void formPods(int podSize) {
        // Method signature only
    }
}
