import java.util.*;

/**
 * Finds referral paths for internship opportunities within the student network.
 * Uses graph traversal to identify connection chains from a starting student
 * to other students who have experience at a target company.
 */
public class ReferralPathFinder {
    /**
     * Constructs a ReferralPathFinder with a given student graph.
     *
     * @param graph the StudentGraph containing all students and their relationships
     */
    public ReferralPathFinder(StudentGraph graph) {
        // Constructor
    }

    /**
     * Finds a path of students from a starting student to another student
     * who has worked at the target company.
     * Uses breadth-first search or similar traversal to find the shortest path.
     *
     * @param start the UniversityStudent to start the search from
     * @param targetCompany the name of the company to find referral contacts for
     * @return a list of students representing the referral path, or an empty list if no path exists
     */
    public List<UniversityStudent> findReferralPath(UniversityStudent start, String targetCompany) {
        // Method signature only
        return new ArrayList<>();
    }
}
