import java.util.*;

/**
 * Represents a university student with complete academic and social information.
 * Extends the Student class and includes features for roommate assignment,
 * internship tracking, and connection strength calculations based on shared preferences.
 */
public class UniversityStudent extends Student {
    // TODO: Constructor and additional methods to be implemented
}

